.config: tweak hyprland and waybar to show sys info on popup on click (save bar space)

--- a/.config/hypr/settings/manual_settings.conf
+++ b/.config/hypr/settings/manual_settings.conf
@@ -437,5 +437,5 @@ group:groupbar {
     indicator_gap = 5
 }
 
-
-
+windowrulev2 = float, title:^(Sysinfo.*)$
+windowrulev2 = move 1400 55, title:^(Sysinfo.*)$
