hyprland: add nvidia settings, update config after update

--- a/.config/hypr/settings/manual_settings.conf
+++ b/.config/hypr/settings/manual_settings.conf
@@ -401,7 +401,7 @@ windowrule = workspace 9, class:^(steam)$
 windowrule = float,class:^(zim)
 windowrule = size, class:^(zim)$ 800 600$
 
-windowrulev2 = tile, class:^(trillian)$, title:^(Contact List)$, move 0 0, size 350 1080
+#windowrulev2 = tile, class:^(trillian)$, title:^(Contact List)$, move 0 0, size 350 1080
 
 # exec-once = [silent] bash -c "sleep 0.2; trillian" &
 exec-once = [silent] bash -c "sleep 0.6; footclient" &
