hyprlad: add nvidia settings

--- a/.config/hypr/settings/manual_settings.conf
+++ b/.config/hypr/settings/manual_settings.conf
@@ -435,3 +435,13 @@ group:groupbar {
 
 windowrulev2 = float, title:^(Sysinfo.*)$
 windowrulev2 = move 1400 55, title:^(Sysinfo.*)$
+
+# Nvidia-specific environment variables
+env = LIBVA_DRIVER_NAME,nvidia
+env = XDG_SESSION_TYPE,wayland
+env = GBM_BACKEND,nvidia-drm
+env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+env = WLR_NO_HARDWARE_CURSORS,1
+
+# Nvidia modesetting
+env = NVD_BACKEND,direct
