.config: nvidia always on hyprland

--- a/.config/hypr/settings/manual_settings.conf
+++ b/.config/hypr/settings/manual_settings.conf
@@ -437,11 +437,15 @@ windowrulev2 = float, title:^(Sysinfo.*)$
 windowrulev2 = move 1400 55, title:^(Sysinfo.*)$
 
 # Nvidia-specific environment variables
-env = LIBVA_DRIVER_NAME,nvidia
-env = XDG_SESSION_TYPE,wayland
-env = GBM_BACKEND,nvidia-drm
-env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+#env = LIBVA_DRIVER_NAME,nvidia
+#env = XDG_SESSION_TYPE,wayland
+#env = GBM_BACKEND,nvidia-drm
+#env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+#env = WLR_NO_HARDWARE_CURSORS,1
+# Force Intel GPU
+env = WLR_DRM_DEVICES,/dev/dri/card2
+env = __GLX_VENDOR_LIBRARY_NAME,mesa
+env = LIBVA_DRIVER_NAME,iHD
 env = WLR_NO_HARDWARE_CURSORS,1
 
 # Nvidia modesetting
-env = NVD_BACKEND,direct
