.config: hyprland floating nvim scratch

--- a/.config/hypr/settings/manual_settings.conf
+++ b/.config/hypr/settings/manual_settings.conf
@@ -436,16 +436,10 @@ group:groupbar {
 windowrulev2 = float, title:^(Sysinfo.*)$
 windowrulev2 = move 1400 55, title:^(Sysinfo.*)$
 
-# Nvidia-specific environment variables
-#env = LIBVA_DRIVER_NAME,nvidia
-#env = XDG_SESSION_TYPE,wayland
-#env = GBM_BACKEND,nvidia-drm
-#env = __GLX_VENDOR_LIBRARY_NAME,nvidia
-#env = WLR_NO_HARDWARE_CURSORS,1
-# Force Intel GPU
-env = WLR_DRM_DEVICES,/dev/dri/card2
-env = __GLX_VENDOR_LIBRARY_NAME,mesa
-env = LIBVA_DRIVER_NAME,iHD
-env = WLR_NO_HARDWARE_CURSORS,1
+$scratchpad = nvimfloat
+windowrulev2 = float,class:^(nvimfloat)$
+windowrule = fullscreenstate 1,class:^(nvimfloat)
+windowrulev2 = workspace special:scratchpad,class:^(nvimfloat)$
+windowrulev2 = movetoworkspace,special:scratchpad,class:^(nvimfloat)$, title:*
 
-# Nvidia modesetting
+bind = $mainMod, n, togglespecialworkspace, scratchpad
