.config: hyprland: fix mod+N conflict, move file browser to mod+E

--- a/.config/hypr/settings/manual_settings.conf
+++ b/.config/hypr/settings/manual_settings.conf
@@ -181,7 +181,7 @@ bind = $mainMod SHIFT, R, exec, hyprctl reload
 bind = $mainMod, 36, exec, footclient
 bind = $mainMod SHIFT, Q, killactive,
 bind = $mainMod SHIFT, E, exec, nwgbar
-bind = $mainMod, N, exec, thunar
+bind = $mainMod, E, exec, thunar
 bind = $mainMod, Y, togglefloating,
 bindr= SUPER, D, exec, pkill wofi || wofi --normal-window --show drun --allow-images
 bind = $mainMod SHIFT, D, exec, nwg-drawer -mb 10 -mr 10 -ml 10 -mt 10
