.config: fish + hyprland + starship tweaks, delete unison (move to main laptop)

--- a/.config/hypr/settings/manual_settings.conf
+++ b/.config/hypr/settings/manual_settings.conf
@@ -178,7 +178,7 @@ bind = $mainMod, I, exec, .local/bin/calamares.sh
 # bind = $mainMod, w, exec, ~/.config/hypr/brain/scripts/waybar_restart.sh
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod SHIFT, R, exec, hyprctl reload
-bind = $mainMod, 36, exec, footclient
+bind = $mainMod, 36, exec, footclient -D ~
 bind = $mainMod SHIFT, Q, killactive,
 bind = $mainMod SHIFT, E, exec, nwgbar
 bind = $mainMod, E, exec, thunar
@@ -395,8 +395,8 @@ bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 bind = $mainMod SHIFT, S, togglespecialworkspace, magic
 
 windowrule = workspace 1, class:^(trillian)$
+windowrule = workspace 2, class:^(brave-browser)$
 windowrule = workspace 3, class:^(footclient)$
-windowrule = workspace 2, class:^(Brave-browser)$
 windowrule = workspace 9, class:^(steam)$
 windowrule = float,class:^(zim)
 windowrule = size, class:^(zim)$ 800 600$
