--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -1,6 +1,104 @@
 # GLOBAL SETTINGS
-scan_timeout = 500
+scan_timeout = 50
 command_timeout = 500
+
+# Which is equivalent to
+format = """
+$username\
+$hostname\
+$localip\
+$shlvl\
+$singularity\
+$kubernetes\
+${custom.dir_home}\
+${custom.git_root}\
+${custom.git_path}\
+$vcsh\
+$fossil_branch\
+$fossil_metrics\
+$git_branch\
+$git_commit\
+$git_state\
+$git_metrics\
+$git_status\
+$hg_branch\
+$hg_state\
+$pijul_channel\
+$docker_context\
+$package\
+$c\
+$cmake\
+$cobol\
+$daml\
+$dart\
+$deno\
+$dotnet\
+$elixir\
+$elm\
+$erlang\
+$fennel\
+$fortran\
+$gleam\
+$golang\
+$guix_shell\
+$haskell\
+$haxe\
+$helm\
+$java\
+$julia\
+$kotlin\
+$gradle\
+$lua\
+$nim\
+$nodejs\
+$ocaml\
+$opa\
+$perl\
+$php\
+$pulumi\
+$purescript\
+$python\
+$quarto\
+$raku\
+$rlang\
+$red\
+$ruby\
+$rust\
+$scala\
+$solidity\
+$swift\
+$terraform\
+$typst\
+$vlang\
+$vagrant\
+$zig\
+$buf\
+$nix_shell\
+$conda\
+$meson\
+$spack\
+$memory_usage\
+$aws\
+$gcloud\
+$openstack\
+$azure\
+$nats\
+$direnv\
+$env_var\
+$mise\
+$crystal\
+$cmd_duration\
+$line_break\
+$jobs\
+$battery\
+$time\
+$status\
+$os\
+$container\
+$netns\
+$shell\
+$character"""
+
 
 [pijul_channel]
 disabled = true
@@ -23,9 +121,13 @@ trim_at = "-"
 # Third param
 [directory]
 style = "purple"
-truncate_to_repo = true
+truncate_to_repo = false
 truncation_length = 0
-truncation_symbol = "repo: "
+truncation_symbol = ""
+repo_root_format = '[$before_root_path]($before_repo_root_style)[$repo_root]($repo_root_style)[$path]($style)[$read_only]($read_only_style) '
+before_repo_root_style = "dimmed white"
+repo_root_style = "bright white"
+disabled = true
 
 # Fourth param
 [sudo]
@@ -33,10 +135,11 @@ disabled = false
 
 # Before all the version info (python, nodejs, php, etc.)
 [git_status]
-ahead = "⇡${count}"
-behind = "⇣${count}"
-deleted = "x"
-diverged = "⇕⇡${ahead_count}⇣${behind_count}"
+ahead = ""
+behind = ""
+deleted = ""
+diverged = "D"
+stashed = 'S'
 style = "white"
 ignore_submodules = true 
 
@@ -118,7 +221,12 @@ symbol = " "
 disabled = true
 
 [git_branch]
-symbol = " "
+symbol = ""
+style = "#70aff5"
+format = '[\($symbol$branch(:$remote_branch)\)]($style) '
+
+[git_state]
+disabled = false
 
 [golang]
 symbol = " "
@@ -358,3 +466,30 @@ disabled = true
 
 [shell]
 disabled = true
+
+[custom.dir_home]
+detect_files = []
+detect_folders = []
+detect_extensions = []
+command = "echo '~'"
+shell = [ "bash" ]
+when = ''' test "$HOME" = "$PWD" '''
+format = "[$output](bold green) "
+
+[custom.git_root]
+detect_files = []
+detect_folders = []
+detect_extensions = []
+command = '~/dotfiles/bin/git-root-path.php --root'
+shell = [ "bash" ]
+when = ''' test "$HOME" != "$PWD" '''
+format = "[$output](bold underline cyan)"
+
+[custom.git_path]
+detect_files = []
+detect_folders = []
+detect_extensions = []
+command = '~/dotfiles/bin/git-root-path.php --path'
+shell = [ "bash" ]
+when = ''' test "$HOME" != "$PWD" '''
+format = "[$output](bold green) "
