.config: hyprland: update config to 0.53

--- a/.config/hypr/settings/manual_settings.conf
+++ b/.config/hypr/settings/manual_settings.conf
@@ -61,10 +61,11 @@ blurls = catfish
 # ##       |_|                     |___/  ##
 # ##########################################
 
-windowrule = opacity 0.85 override 0.85 override,class:thunar
-windowrule = opacity 0.85 override 0.85 override,class:footclient
-windowrule = opacity 0.85 override 0.85 override,class:catfish
-windowrule = opacity 0.85 override 0.85 override,class:nvim
+windowrule = match:class thunar, opacity 0.85
+windowrule = match:class footclient, opacity 0.85
+windowrule = match:class catfish, opacity 0.85
+windowrule = match:class nvim, opacity 0.85
+
 # ###########################################
 # ##   __ _             _   _              ##
 # ##  / _| | ___   __ _| |_(_)_ __   __ _  ##
@@ -84,8 +85,7 @@ windowrulev2 = opacity 0.85 0.85,floating:1
 # ## |_|  \___/ \___|\__,_|___/\___|\__,_| ##
 # ###########################################
 
-windowrule = stayfocused,class:wofi
-
+windowrulev2 = match:class wofi, stayfocused on
 
 # #########################################################
 # ##  _____ _                           _           _    ##
@@ -100,12 +100,12 @@ windowrule = stayfocused,class:wofi
 windowrulev2=move 0 0,title:^(flameshot)
 #windowrulev2=nofullscreenrequest,title:^(flameshot)
 
-windowrule = float,class:garuda-assistant
-windowrule = float,class:garuda-boot-options
-windowrule = float,class:garuda-gamer
-windowrule = float,class:garuda-network-assistant
-windowrule = float,class:garuda-settings-manager
-windowrule = float,class:garuda-welcome
+windowrule = match:class garuda-assistant, float on
+windowrule = match:class garuda-boot-options, float on
+windowrule = match:class garuda-gamer, float on
+windowrule = match:class garuda-network-assistant, float on
+windowrule = match:class garuda-settings-manager, float on
+windowrule = match:class garuda-welcome, float on
 
 # Example windowrule v2
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
@@ -330,8 +330,7 @@ bind = ALT SHIFT, Print, exec, grimblast output active && notify-send Output cap
 # ##|____/ \___/ \____|_|\_\##
 # ############################
 bind = ALT SHIFT , H , exec, ~/.config/hypr/brain/scripts/nwg_dock_toggle.sh
-layerrule = blur ,gtk-layer-shell
-layerrule = ignorezero ,gtk-layer-shell
+layerrule = match:namespace gtk-layer-shell, blur on, ignore_alpha 0.0
 
 # #############################################################################
 # ## _   _                    _____                        _                 ##
@@ -394,12 +393,12 @@ bind = $mainMod SHIFT, S, togglespecialworkspace, magic
 bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 bind = $mainMod SHIFT, S, togglespecialworkspace, magic
 
-windowrule = workspace 1, class:^(trillian)$
-windowrule = workspace 2, class:^(brave-browser)$
-windowrule = workspace 3, class:^(footclient)$
-windowrule = workspace 9, class:^(steam)$
-windowrule = float,class:^(zim)
-windowrule = size, class:^(zim)$ 800 600$
+windowrule = match:class ^(trillian)$, workspace 1
+windowrule = match:class ^(brave-browser)$, workspace 2
+windowrule = match:class ^(footclient)$, workspace 3
+windowrule = match:class ^(steam)$, workspace 9  
+windowrule = match:class ^(zim), float on
+windowrule = match:class ^(zim)$, size 800 600$
 
 #windowrulev2 = tile, class:^(trillian)$, title:^(Contact List)$, move 0 0, size 350 1080
 
@@ -437,9 +436,9 @@ windowrulev2 = float, title:^(Sysinfo.*)$
 windowrulev2 = move 1400 55, title:^(Sysinfo.*)$
 
 $scratchpad = nvimfloat
-windowrulev2 = float,class:^(nvimfloat)$
-windowrule = fullscreenstate 1,class:^(nvimfloat)
-windowrulev2 = workspace special:scratchpad,class:^(nvimfloat)$
-windowrulev2 = movetoworkspace,special:scratchpad,class:^(nvimfloat)$, title:*
+windowrulev2 = match:class:^(nvimfloat)$, float on
+windowrulev2 = match:class:^(nvimfloat), fullscreenstate 1
+windowrulev2 = match:class:^(nvimfloat)$, workspace special:scratchpad
+windowrulev2 = match:class:^(nvimfloat)$, movetoworkspace,special:scratchpad
 
 bind = $mainMod, n, togglespecialworkspace, scratchpad
