.config: update hyprland terminal group config

--- a/.config/hypr/settings/manual_settings.conf
+++ b/.config/hypr/settings/manual_settings.conf
@@ -408,8 +408,13 @@ exec-once = [silent] bash -c "sleep 1; brave" &
 
 workspace = 1, layout=dwindle
 
-# Run the script when starting (optionally customize for manual call too)
-windowrulev2 = group set always lock invade, class:^(footclient)$
+# Footclient windows – full size, tabbed/grouped
+windowrule {
+    name = footclient group
+    match:class = ^footclient$
+    group = set lock invade
+}
+
 bind = $mainMod, apostrophe, changegroupactive, f
 bind = $mainMod, semicolon, changegroupactive, b
 bind = $mainMod SHIFT, apostrophe, movegroupwindow, f
