.config: add hyprshot bindings

--- a/.config/hypr/settings/manual_settings.conf
+++ b/.config/hypr/settings/manual_settings.conf
@@ -316,6 +316,12 @@ bind=,173,exec,playerctl previous
 #bind = CTRL, Print, exec, .config/hypr/scripts/screenshot_window.sh
 # Screenshot the current display and pipe to swappy
 #bind = SHIFT, Print, exec, .config/hypr/scripts/screenshot_display.sh
+# ~/.config/hypr/hyprland.conf
+# Screenshot a window
+bind = $mainMod, M, exec, hyprshot -m window
+# Screenshot a region
+bind = $mainMod SHIFT, M, exec, hyprshot -m region --freeze
+bind = $mainMod SHIFT ALT, M, exec, hyprshot -m region --freeze --clipboard-only
 
 bind = ,Print, exec, grimblast save screen && notify-send Screenshot captured
 bind = SHIFT, Print, exec, grimblast save area && notify-send Selected\ area captured
